2025-12-05T00:45:04Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19948780298 # 829
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-05
* notice: last 14d: unq all: 4 4
* notice: prev accum: outdated-unq outdated-all / unq all: 485 1515 / 488 1518
* notice: next accum: outdated-unq outdated-all / unq all: 485 1515 / 489 1519
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-12-04]

2025-11-27T00:42:44Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19721548342 # 821
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-27
* notice: last 14d: unq all: 3 3
* notice: prev accum: outdated-unq outdated-all / unq all: 484 1514 / 487 1517
* notice: next accum: outdated-unq outdated-all / unq all: 485 1515 / 488 1518
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-11-12] / [2025-11-26]

2025-11-26T00:43:50Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19688665426 # 820
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-26
* notice: last 14d: unq all: 3 3
* notice: prev accum: outdated-unq outdated-all / unq all: 483 1513 / 487 1517
* notice: next accum: outdated-unq outdated-all / unq all: 484 1514 / 487 1517
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-11-11] / []

2025-11-25T00:42:14Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19654213691 # 819