@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-12-05T00:45:04Z",
-  "count_outdated" : 1515,
-  "uniques_outdated" : 485,
+  "timestamp" : "2025-12-07T00:50:24Z",
+  "count_outdated" : 1516,
+  "uniques_outdated" : 486,
   "count" : 1519,
   "uniques" : 489,
   "views" : [
-    {
-      "timestamp": "2025-11-22T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-11-24T00:00:00Z",
       "count": 1,
