@@ -1,3 +1,12 @@
+2025-12-07T00:50:24Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19996644263 # 831
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-07
+* notice: last 14d: unq all: 3 3
+* notice: prev accum: outdated-unq outdated-all / unq all: 485 1515 / 489 1519
+* notice: next accum: outdated-unq outdated-all / unq all: 486 1516 / 489 1519
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2025-11-22] / []
+
 2025-12-05T00:45:04Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19948780298 # 829
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-05
